--- a/play-ground.html
+++ b/play-ground.html
@@ -12,15 +12,22 @@
     <link rel="icon" type="image/x-icon" href="volleyball-solid.svg">
 </head>
 <body>
+	<header>
+        <div class="container">
+            <div id="branding">
+                <h1>Sports Management</h1>
+            </div>
 	<nav class="navbar">
 		<ul>
-			<li><a href="index.html" target="_blank"  class="contents">Home</a></li>
+			<li><a href="" target="_blank"  class="contents">Home</a></li>
 			<li><a href="image.html" target="_blank"  class="contents">Image</a></li>
-			<li><a href="information.html" target="_blank"  class="contents">Information</a></li>
+			<li><a href="" target="_blank"  class="contents">Information</a></li>
 			<li><a href="form.html" target="_blank"  class="contents">Form</a></li>
 			<li><a href="feedback.html" target="_blank"  class="contents">Feedback</a></li>
 			<li><a href="play-ground.html" target="_blank"  class="contents">Play-Ground</a></li>
 		</ul>
 	</nav>
+	 </div>
+    </header>
 </body>
 </html>
